k8s/02-order-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-db
  namespace: go-event-platform
  labels:
    app.kubernetes.io/name: order-db
    app.kubernetes.io/part-of: go-event-platform
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: order-db
  template:
    metadata:
      labels:
        app.kubernetes.io/name: order-db
        app.kubernetes.io/part-of: go-event-platform
    spec:
      containers:
        - name: postgres
          image: postgres:16-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
          readinessProbe:
            exec:
              command: ["pg_isready", "-U", "orders"]
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            exec:
              command: ["pg_isready", "-U", "orders"]
            initialDelaySeconds: 10
            periodSeconds: 10
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: order-db-data
---
apiVersion: v1
kind: Service
metadata:
  name: order-db
  namespace: go-event-platform
  labels:
    app.kubernetes.io/name: order-db
    app.kubernetes.io/part-of: go-event-platform
spec:
  selector:
    app.kubernetes.io/name: order-db
  ports:
    - port: 5432
      targetPort: 5432
