k8s/04-nats.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nats
  namespace: go-event-platform
  labels:
    app.kubernetes.io/name: nats
    app.kubernetes.io/part-of: go-event-platform
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: nats
  template:
    metadata:
      labels:
        app.kubernetes.io/name: nats
        app.kubernetes.io/part-of: go-event-platform
    spec:
      containers:
        - name: nats
          image: nats:2-alpine
          args: ["-js", "-m", "8222"]
          ports:
            - containerPort: 4222
              name: client
            - containerPort: 8222
              name: monitor
          readinessProbe:
            httpGet:
              path: /varz
              port: 8222
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /varz
              port: 8222
            initialDelaySeconds: 10
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: nats
  namespace: go-event-platform
  labels:
    app.kubernetes.io/name: nats
    app.kubernetes.io/part-of: go-event-platform
spec:
  selector:
    app.kubernetes.io/name: nats
  ports:
    - port: 4222
      targetPort: 4222
      name: client
    - port: 8222
      targetPort: 8222
      name: monitor
