k8s/08-notification-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
  namespace: go-event-platform
  labels:
    app.kubernetes.io/name: notification-service
    app.kubernetes.io/part-of: go-event-platform
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: notification-service
  template:
    metadata:
      labels:
        app.kubernetes.io/name: notification-service
        app.kubernetes.io/part-of: go-event-platform
    spec:
      containers:
        - name: notification-service
          image: notification-service:local
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8083
              name: http
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8083
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8083
            initialDelaySeconds: 10
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  namespace: go-event-platform
  labels:
    app.kubernetes.io/name: notification-service
    app.kubernetes.io/part-of: go-event-platform
spec:
  selector:
    app.kubernetes.io/name: notification-service
  ports:
    - port: 8083
      targetPort: 8083
      name: http
