k8s/09-analytics-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: analytics-service
  namespace: go-event-platform
  labels:
    app.kubernetes.io/name: analytics-service
    app.kubernetes.io/part-of: go-event-platform
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: analytics-service
  template:
    metadata:
      labels:
        app.kubernetes.io/name: analytics-service
        app.kubernetes.io/part-of: go-event-platform
    spec:
      containers:
        - name: analytics-service
          image: analytics-service:local
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8084
              name: http
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8084
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8084
            initialDelaySeconds: 10
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: analytics-service
  namespace: go-event-platform
  labels:
    app.kubernetes.io/name: analytics-service
    app.kubernetes.io/part-of: go-event-platform
spec:
  selector:
    app.kubernetes.io/name: analytics-service
  ports:
    - port: 8084
      targetPort: 8084
      name: http
